--- a/analysis/DataIntegration.Rmd
+++ b/analysis/DataIntegration.Rmd
@@ -13,16 +13,10 @@ options(width = 80)
 source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/functions.R")
 ```
 
-# Summary
 
-<!-- Single cell data from Tasic et al. 2018 is from two separate regions of mouse brain, Anterior Lateral Motor cortex (ALM) and Primary Visual cortex (VISp). Total single cells sequenced are 10,068 and 15,413, respectively. -->
+# Main Steps for Hook dataset
 
-<!-- The single cell data from Tasic et al. 2016 is total of 1,809 cells from Primary Visual cortex (VISp) of mouse brain. -->
-
-
-# Main Steps
-
-## Hook dataset
+## Gene level expression
 
   **Citation:** Hook, Paul W., Sarah A. McClymont, Gabrielle H. Cannon, William D. Law, A. Jennifer Morton, Loyal A. Goff, and Andrew S. McCallion. 2018. “Single-Cell RNA-Seq of Mouse Dopaminergic Neurons Informs Candidate Gene Selection for Sporadic Parkinson Disease.” American Journal of Human Genetics 102 (3): 427–46.
 
@@ -38,45 +32,20 @@ source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/fun
 
 After downloading the data, unzip the file of **FPKM** matrix for further analysis.
 
-
-#### Download raw fastq files from [SRA](https://www.ncbi.nlm.nih.gov/Traces/study/?acc=SRP126648)
-
-
-
-
-<!-- ### 2. Filter out non-relevant genes prior to analysis. I took the filtration criteria from methods of Tasic et al., 2018. -->
-
-<!-- Filter out -->
-
-<!--   - Predicted gene models (gene names that start with Gm). -->
-<!--   - Genes from mitochondrial chromosome. -->
-<!--   - Ribosomal genes -->
-<!--   - Sex-specific genes (Here is how I determined the gender-specific genes: [Code](https://github.com/yasinkaymaz/Harvard-NissenLab/tree/master/code/Determine_genes_to_filter.R)) -->
-<!--   - Genes detected in less than 4 cells (min.cells = 4, Seurat) -->
+```{r eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
+gds <- GEOquery::getGEO(filename = '~/data/GSE108020_series_matrix.txt.gz')
+```
 
 ### 2. Filtration
 
-  - Filter out cells expressing less than 500 genes (min.genes = 500, Seurat)
+  - Filter out cells that are found to be low quality in the Hook et al. resulting in 396 cells for downstream analysis.
+  
+  - Filtered mitchondrial, ribosomal, and Gm-xxx genes as well as genes expressed less than 20 cells (same filtration applied in the paper).
+  
 
+## Isoform level expression
 
-
-
-
-
-
-
-<!-- ## Tasic2016 dataset -->
-
-<!-- ### 1. Obtain the data -->
-
-<!-- ```{bash} -->
-<!-- #wget https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE71585&format=file&file=GSE71585%5FClustering%5FResults%2Ecsv%2Egz -->
-<!-- #wget https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE71585&format=file&file=GSE71585%5FRefSeq%5FTPM%2Ecsv%2Egz -->
-<!-- ``` -->
-
-### Genome alignment
-
-A. Get reference data from Gencode
+#### 1. Get reference data from Gencode
 
 Reference mouse genome:
 ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M20/GRCm38.primary_assembly.genome.fa.gz
@@ -84,7 +53,18 @@ ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M20/GRCm38.prima
 Comprehensive gene annotation: 	ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M20/gencode.vM20.annotation.gtf.gz
 
 
-For the processing details, please follow [Code](https://github.com/yasinkaymaz/Harvard-GillardonLab/tree/master/code/WP_codes.R)
+#### 2. Download raw fastq files from [SRA](https://www.ncbi.nlm.nih.gov/Traces/study/?acc=SRP126648)
+
+Using sratoolkit.
+
+#### Genome alignment of raw reads for expression quantifiation
+
+Using Rsem-STAR pipeline, I aligned the reads to reference transcriptome and quantified isoforms (count, TPM).
+
+
+#### For the processing details, please follow
+
+[Code](https://github.com/yasinkaymaz/Harvard-GillardonLab/tree/master/code/WP_codes.R)
 
 
 .
