--- a/analysis/DataIntegration.Rmd
+++ b/analysis/DataIntegration.Rmd
@@ -16,8 +16,6 @@ source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/fun
 
 # Main Steps for Hook dataset
 
-## Gene level expression
-
   **Citation:** Hook, Paul W., Sarah A. McClymont, Gabrielle H. Cannon, William D. Law, A. Jennifer Morton, Loyal A. Goff, and Andrew S. McCallion. 2018. “Single-Cell RNA-Seq of Mouse Dopaminergic Neurons Informs Candidate Gene Selection for Sporadic Parkinson Disease.” American Journal of Human Genetics 102 (3): 427–46.
 
 
@@ -25,6 +23,14 @@ source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/fun
 
 	473 single cell RNA-Seq samples from sorted mouse Th-eGFP+ dopaminergic neurons collected at two timepoints from three distinct brain regions.
 	
+#### SRA raw fastq files:
+
+  Using sratoolkit, downloaded raw fastq files from [SRA](https://www.ncbi.nlm.nih.gov/Traces/study/?acc=SRP126648)
+
+#### Expression table deposited to GEO:
+
+  For sanity check and quality control.
+  
 ```{bash}
 #wget ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE108nnn/GSE108020/suppl/GSE108020_fpkm_table.txt.gz
 #unzip GSE108020_fpkm_table.txt.gz
@@ -43,7 +49,7 @@ gds <- GEOquery::getGEO(filename = '~/data/GSE108020_series_matrix.txt.gz')
   - Filtered mitchondrial, ribosomal, and Gm-xxx genes as well as genes expressed less than 20 cells (same filtration applied in the paper).
   
 
-## Isoform level expression
+## Gene & Isoform level expression
 
 #### 1. Get reference data from Gencode
 
@@ -53,18 +59,14 @@ ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M20/GRCm38.prima
 Comprehensive gene annotation: 	ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M20/gencode.vM20.annotation.gtf.gz
 
 
-#### 2. Download raw fastq files from [SRA](https://www.ncbi.nlm.nih.gov/Traces/study/?acc=SRP126648)
-
-Using sratoolkit.
-
 #### Genome alignment of raw reads for expression quantifiation
 
 Using Rsem-STAR pipeline, I aligned the reads to reference transcriptome and quantified isoforms (count, TPM).
 
 
-#### For the processing details, please follow
-
-[Code](https://github.com/yasinkaymaz/Harvard-RosenbrockLab/tree/master/code/WP_codes.R)
+For the processing details, please follow 
+Gene-level: [Code](https://github.com/yasinkaymaz/Harvard-RosenbrockLab/tree/master/code/Rsem-Gene-counts.R)
+Isoform-level: [Code](https://github.com/yasinkaymaz/Harvard-RosenbrockLab/tree/master/code/Rsem-Isoform-counts.R)
 
 
 .
